--- a/fixtheteleporter.scss
+++ b/fixtheteleporter.scss
@@ -16,4 +16,4 @@
 @import 'modules/css/variables';
 @import 'modules/css/layout';
 @import 'modules/css/tile';
-@import 'modules/css/rotate';
+@import 'modules/css/flip';
