--- a/modules/css/tile.scss
+++ b/modules/css/tile.scss
@@ -18,16 +18,16 @@ div#player_board #tile {
       grid-column-start: round((($position % 3) + 2)/2) + 1;
       grid-row-start: round($position / 2 + 0.5);
     }
-    @for $tileType from 1 through 8 {
-      &[data-type="#{$tileType}"][data-position="#{$position}"] {
-        transform: rotate((($tileType - 1 - $position) % 4) * 90deg);
-      }
-    }
   }
   @for $tileType from 1 through 8 {
     &[data-type="#{$tileType}"] {
       background-position-x: -#{-150 + 150 * $tileType}px;
       background-position-y: 0;
+    }
+    @for $position from 0 through 3 {
+      &[data-type="#{$tileType}"][data-position="#{$position}"] {
+        transform: rotate(((1 - $tileType + $position) % 4) * 90deg);
+      }
     }
   }
 }
