--- a/modules/css/flip.scss
+++ b/modules/css/flip.scss
@@ -2,6 +2,7 @@ div#flip {
   display: flex;
   justify-content: center;
   align-items: center;
+  margin: $insideGap;
 
   &[data-mirror="true"] {
     -webkit-transform: scaleX(-1);
